mongodb/express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: mongodb
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
